<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Math Challenge</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    <string name="abs">ABOUT</string>
    <string name="hint1">Top numbers</string>
    <string name="hint2">Bottom numbers</string>
    <string name="hint3">Number of cards</string>
    <string name="abs1">Maths Challenge Application is designed to provide an exciting and fun game to practice family-friendly way to become more involved in learning math.</string>
    <string name="abs2">Mathematical Challenges generally refer to basic mathematics such as addition, subtraction, multipication and division for all elementary students.</string>
    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item> Challenge</item>
        <item> Top Scores</item>
        <item> Manage Game</item>
        <item> Help</item>
        <item> About</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ball</item>
        <item>@drawable/top</item>
        <item>@drawable/list</item>
        <item>@drawable/comment</item>
        <item>@drawable/about</item>
    </array>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="title_activity_add_form">Add_form</string>
    <string name="title_activity_apluss">APluss</string>
    <string name="title_activity_addition">Addition</string>
    <string name="title_activity_multiply">Multiply</string>
    <string name="title_activity_sample">Sample</string>
    <string name="title_activity_ac__adding">Addition</string>
    <string name="title_activity_ac_min">Subtraction</string>
    <string name="title_activity_ac_mul">Multiplication</string>
    <string name="title_activity_ac_div">Division</string>
    <string name="title_activity_top_numbers">TopNumbers</string>
    <string name="title_activity_boot_numbers">BootNumbers</string>
    <string name="title_activity_ac_normal_add">Ac_normal_add</string>
    <string name="title_activity_ac_normal_min">Ac_normal_min</string>
    <string name="title_activity_ac_normal_mul">Ac_normal_mul</string>
    <string name="title_activity_ac_normal_div">Ac_normal_div</string>

</resources>
