<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffaedae0" >

    <Button
        android:id="@+id/button1"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editbottom"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="46dp"
        android:layout_marginLeft="70dp"
        android:text="Save" />

    <EditText
        android:id="@+id/editbottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edittop"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/hint2"
              >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/edittop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editbottom"
        android:layout_alignParentTop="true"
        android:layout_marginTop="34dp"
        android:ems="10"
        android:hint="@string/hint1"
        android:inputType="number" />

    <EditText
        android:id="@+id/editcards"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editbottom"
        android:layout_below="@+id/editbottom"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/hint3" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button1"
        android:layout_alignLeft="@+id/editcards"
        android:layout_marginBottom="64dp"
        android:drawableTop="@drawable/small_add" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView3"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignRight="@+id/editcards"
        android:drawableTop="@drawable/small_div" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_toRightOf="@+id/button1"
        android:drawableTop="@drawable/small_min" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textView3"
        android:layout_centerVertical="true"
        android:text="Select Operators" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView1"
        android:layout_alignBottom="@+id/textView1"
        android:layout_alignLeft="@+id/textView5"
        android:layout_marginLeft="20dp"
        android:drawableTop="@drawable/small_sub" />

</RelativeLayout>